# onthefly

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  aligned__allocator_8hpp.html  annotated.html  asserts_8cpp.html  asserts_8hpp.html  atomvector_8hpp.html  binary_8hpp.html  classotf_1_1_atom_vector.html  classotf_1_1_gridder.html  classotf_1_1_linked_cell_list.html  classotf_1_1_linked_cell_list_1_1_atom.html  classotf_1_1_ortho_sim_box.html  classotf_1_1_sim_cell.html  classotf_1_1_species_map.html  classotf_1_1detail_1_1_stack_trace.html  classotf_1_1detail_1_1aligned.html  components.md  current__function_8hpp.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_2bc59e26ff664b8da0496b5fea9e4844.html  dir_2ddf0255d24a2ddc3666d5cf6da4e518.html  dir_30729b9bb54f103f8408e606dae10cee.html  dir_31a378c84b956866319ca9d9294f1959.html  dir_6961870ce9b0d289f097cfe1b8333291.html  dir_76785f9a4780ce15da7add2fe8091801.html  files.html  gridder_8cpp.html  gridder_8hpp.html  index.html  linkedcelllist_8hpp.html  modules.html  namespacebitsery.html  namespaceotf.html  (+16 more)
.cache/clangd/index/: main.cpp.03AB6DBB7AB71831.idx  main.cpp.472243B034CB3E84.idx  onthefly.cpp.2C39679DE71686A7.idx  onthefly.cpp.64A9158AB8ECE6A6.idx  onthefly.cpp.854B35070FD343C1.idx  onthefly.h.C5B6868D4B51FE14.idx  onthefly.h.CB19B5CBA9336807.idx
.github/workflows/: docs.yaml  intel.yml  macos.yml  standalone.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
cmake/: tools.cmake
data/: FeH-BB.fs  Meyer.eam  adp.toml  eam.toml  wen.eam.fs
data/FeH/: V0H1.xyz  V1.xyz  V1H1.xyz  V1H2.xyz  V1H3.xyz  V1H4.xyz  V1H5.xyz  V2.xyz  V2H1.xyz  V3.xyz  V3H1.xyz  V4.xyz  V4H1.xyz  V5.xyz  V5H1.xyz  V6.xyz
data/NiCr/: NiCr.xyz  NiCr1vac1cr.cfg  NiCr1vac1cr.xyz
data/Surface/: dimple_h1.xyz  flat_h1.xyz  full.xyz
docs/: CMakeLists.txt
docs/pages/: about.dox
documentation/: CMakeLists.txt  Doxyfile  conf.py
src/: aligned_allocator.hpp  config.hpp  main.cpp  olkmc.hpp  stream.hpp  supercell.cpp  supercell.hpp  utility.cpp  utility.hpp  visualise.hpp
src/discrete/: discrete_classify.cpp  discrete_classify.hpp  discrete_supercell.cpp  discrete_supercell.hpp
src/kinetics/: basin.cpp  basin.hpp  superbasin.cpp  superbasin.hpp  supercache.cpp  supercache.hpp
src/libatom/: asserts.cpp  asserts.hpp  atom.hpp  atom_array.hpp  sim_cell.hpp  utils.cpp  utils.hpp
src/libatom/data/: SoA.hpp  adaptor.hpp  combi.hpp  viewSoA.hpp
src/libatom/detail/: atom.hpp  eigen_array_adaptor.hpp
src/libatom/env/: catalogue.cpp  catalogue.hpp  classify.cpp  classify.hpp  geometry.hpp  topology.cpp  topology.hpp
src/libatom/io/: binary.hpp  xyz.cpp  xyz.hpp
src/libatom/minimise/LBFGS/: core.cpp  core.hpp  lbfgs.cpp  lbfgs.hpp
src/libatom/neighbour/: celllist.hpp  grid.cpp  grid.hpp  gridder.cpp  gridder.hpp  lcr_sort.hpp  linkedcelllist.hpp  list.cpp  list.hpp  neigh_grid.cpp  neigh_grid.hpp  neighbour_list.cpp  neighbour_list.hpp  neighreduce.hpp  sort.hpp
src/libatom/potentials/: base.hpp  interface.hpp  potential.hpp  spline.cpp  spline.hpp
src/libatom/potentials/EAM/: data.cpp  data.hpp  eam.cpp  eam.hpp
src/libatom/potentials/ROT/: dimer.cpp  dimer.hpp
src/libatom/random/: xoshiro.hpp
src/libatom/saddle/: perturb.cpp  perturb.hpp
src/libatom/saddle/dimer/: dimer.hpp
src/libatom/system/: ___species_map.hpp  aligned_allocator.hpp  atom_array.hpp  atom_vector.hpp  atomvec.hpp  atomvector.hpp  member.hpp  ortho_sim_box.hpp  sim_cell.hpp  simbox.cpp  simbox.hpp  simcell.hpp  species_map.hpp  speciesmap.hpp
src/libatom/system/detail/: eigen_adaptor.hpp  eigen_array_adaptor.hpp
src/local/: catalogue.cpp  catalogue.hpp  classify.cpp  classify.hpp  discrete_key.hpp  environment.cpp  environment.hpp  fuzzy_key.hpp  geometry.cpp  geometry.hpp
src/minimise/: minimiser_base.cpp  minimiser_base.hpp
src/minimise/BB/: bb.cpp  bb.hpp
src/minimise/HYBRID/: hybrid.cpp  hybrid.hpp
src/minimise/LBFGS/: core.hpp  lbfgs.cpp  lbfgs.hpp
src/onthefly/: onthefly.cpp  onthefly.h  onthefly.hpp
src/package/: package.cpp  package.hpp
src/potentials/: adapt.hpp  neigh_reduce.hpp  potential_base.cpp  potential_base.hpp  spline.cpp  spline.hpp
src/potentials/ADP/: data.cpp  data.hpp  potential.cpp  potential.hpp
src/potentials/EAM/: data.cpp  data.hpp  potential.cpp  potential.hpp
src/sp_search/: find_mech.cpp  find_mech.hpp  sp_search_base.cpp  sp_search_base.hpp  vineyard.cpp  vineyard.hpp
src/sp_search/dimer/: dimer.cpp  dimer.hpp  l_shrink.cpp  l_shrink.hpp  search.hpp  shrinking.cpp  shrinking.hpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
standalone/src/: env_analysis.cpp  env_analysis2.cpp  lattice.cpp  main.cpp  perm.cpp  sps_test.cpp
test/: CMakeLists.txt
test/src/: onthefly.cpp  utils.cpp
test/src/libatom/: atom_array.cpp  ortho_sim_box.cpp  utils.cpp
test/src/libatom/env/: geometry.cpp
test/src/libatom/neighbour/: atom_vec.cpp  grid.cpp  gridder.cpp  list.cpp  neigh_grid.cpp  neighbour_list.cpp
test/src/libatom/potentials/EAM/: data.cpp
test/src/libatom/system/: atom_array.cpp  atom_vector.cpp  atomvec.cpp  atomvector.cpp  ortho_sim_box.cpp  simbox.cpp  species_map.cpp  speciesmap.cpp
tools/: lat_H.py  lattice.py
tools/scripts/: baseA.py  baseB.py  baseBA.py  baseBB.py  setfl_fmt.py
